WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81463
[Chromium] PlatformContextSkia::m_drawingToImageBuffer is not correctly set when using per-tile painting.
https://bugs.webkit.org/show_bug.cgi?id=81463
Summary
[Chromium] PlatformContextSkia::m_drawingToImageBuffer is not correctly set w...
David Reveman
Reported
2012-03-17 19:14:33 PDT
PlatformContextSkia::setDrawingToImageBuffer() is not called properly when using per-tile painting. This causes skia to use sub-pixel text rendering when it shouldn't. Issue was previously reported as:
http://code.google.com/p/skia/issues/detail?id=477
Attachments
Patch
(2.67 KB, patch)
2012-03-17 19:16 PDT
,
David Reveman
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Reveman
Comment 1
2012-03-17 19:16:58 PDT
Created
attachment 132477
[details]
Patch
WebKit Review Bot
Comment 2
2012-03-17 20:20:35 PDT
Comment on
attachment 132477
[details]
Patch Clearing flags on attachment: 132477 Committed
r111131
: <
http://trac.webkit.org/changeset/111131
>
WebKit Review Bot
Comment 3
2012-03-17 20:20:39 PDT
All reviewed patches have been landed. Closing bug.
Dana Jansens
Comment 4
2012-03-18 09:51:06 PDT
@enne this is going to interact with enabling subpixel AA work.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug