[Chromium] PlatformContextSkia::m_drawingToImageBuffer is not correctly set when using per-tile painting. https://bugs.webkit.org/show_bug.cgi?id=81463

Patch by David Reveman <reveman@chromium.org> on 2012-03-17
Reviewed by James Robinson.

Call PlatformContextSkia::setDrawingToImageBuffer() from
SkPictureCanvasLayerTextureUpdater::prepareToUpdate so that sub-pixel
text rendering is not used incorrectly with per-tile painting.

No new tests.

* platform/graphics/chromium/SkPictureCanvasLayerTextureUpdater.cpp:
(WebCore::SkPictureCanvasLayerTextureUpdater::prepareToUpdate):

Canonical link: https://commits.webkit.org/98676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111131 268f45cc-cd09-0410-ab3c-d52691b4dbfc